# riichi

./: .dockerignore  .env.example  .gitignore  .impeccable.md  AGENTS.md  Cargo.toml  DESIGN.md  Dockerfile  HISTORY.md  compose.yaml  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
.github/workflows/: test.yml
apps/agent-cli/: Cargo.toml
apps/agent-cli/src/: main.rs  mcp.rs  profile.rs  work.rs
apps/api/: Cargo.toml
apps/api/src/: agent_protocol.rs  agents.rs  auth.rs  document_sync.rs  documents.rs  github.rs  issues.rs  lib.rs  main.rs  navigation.rs  onboarding.rs  overview.rs  p1.rs  projects.rs  views.rs
apps/api/tests/: auth_http.rs  electric_proxy_e2e.rs  github_e2e.rs  http.rs  queue_e2e.rs  triage_e2e.rs
apps/api/tests/support/: mod.rs
apps/web/: .env.example  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web/src/: index.css  main.tsx  router.tsx  themes-preview.json  vite-env.d.ts
apps/web/src/components/: susuki_moon.tsx
apps/web/src/components/command/: command-menu.test.ts  command-menu.tsx
apps/web/src/components/documents/: document-editor.tsx  document-references.ts  document-relationships.tsx  document-tree.tsx  editor-suggestions.test.ts  editor-suggestions.ts  mention-list.tsx  resource-list.tsx  slash-command-list.tsx
apps/web/src/components/issues/: first-use-terminology-hint.test.tsx  first-use-terminology-hint.tsx  issue-activity-timeline.tsx  issue-create-dialog.tsx  issue-importance-menu.tsx  issue-status-menu.tsx  lazy-issue-create-dialog.tsx  rich-text-comment-editor.tsx  rich-text-issue-editor.test.ts  rich-text-issue-editor.tsx
apps/web/src/components/landing/: closing.tsx  decisions.tsx  dispatch-lifecycle.tsx  faq.tsx  hero.tsx  nav.tsx  pricing.tsx  principles.tsx  (+2 more)
apps/web/src/data/: agents.test.ts  agents.ts  inbox.test.ts  inbox.ts  queue-search.test.ts  queue-search.ts  queue.test.ts  queue.ts
apps/web/src/hooks/: use-active-project.ts  use-active-team.test.ts  use-active-team.ts  use-all-issues.ts  use-app-logout.ts  use-human-agent-roster.ts  use-human-documents.ts  use-issue-activity.ts  use-navigation.ts  use-pending-approvals.ts  use-project-queue.ts  use-team-issues.ts
apps/web/src/lib/: api.test.ts  api.ts  document-content.test.ts  document-content.ts  keyboard-shortcuts.test.ts  keyboard-shortcuts.ts  loro-document.test.ts  loro-document.ts  loro-persistence.ts  metadata-sync.test.ts  metadata-sync.ts  navigation-sync.ts  organization-slug.ts  product-icons.ts  session-state.test.ts  session-state.ts  shape-url.test.ts  shape-url.ts  theme-preferences.ts  utils.test.ts  utils.ts
apps/web/src/routes/: __root.tsx  agents.tsx  approvals.tsx  document.tsx  inbox.tsx  integrations.tsx  issue-detail.tsx  landing.tsx  login.tsx  onboarding.tsx  organization-documents.tsx  project-resource.tsx  queue.tsx  settings-organization.tsx  settings-profile.tsx  settings-project.tsx  settings.tsx  team-issues.tsx  team-resource.tsx  team-settings.tsx  triage.tsx
apps/web/tests/e2e/: queue.spec.ts
apps/worker/: Cargo.toml
apps/worker/src/: lib.rs  main.rs
apps/worker/tests/: delivery.rs
apps/worker/tests/support/: mod.rs
crates/application/: Cargo.toml
crates/application/src/: config.rs  documents.rs  lib.rs  loro_document.rs
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/auth/tests/: oidc.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/integrations-github/: Cargo.toml
crates/integrations-github/src/: lib.rs
crates/persistence/: Cargo.toml
crates/persistence/migrations/: 0001_initial.sql  0002_auth.sql  0003_invites.sql  0004_delivery_events.sql  0005_bounded_outbox_retries.sql  0006_agent_session_credentials.sql  0007_triage_primitives.sql  0008_human_controls.sql  0009_github_external_state.sql  0010_quarantined_attempts.sql  0011_collaborator_grantors.sql  0012_agent_role_policy.sql  0013_organizations_teams.sql  0014_human_avatars.sql  0015_rich_comments.sql  0016_team_owned_issues.sql  0017_relax_issue_project_actor.sql  0018_team_owned_agent_runtime.sql  0019_team_viewer_memberships.sql  0020_notifications.sql  0021_team_issue_sequences.sql  0022_team_emoji.sql  0023_organization_branding.sql  0024_issue_importance.sql  0025_issue_subissues.sql  0026_read_path_indexes.sql  0028_delivery_event_sequence.sql  0029_retention_indexes.sql  0030_retention_indexes.sql  0031_documents.sql  0032_document_job_dead_letters.sql  0033_loro_document_storage.sql  0034_document_boundary_integrity.sql  0035_issue_description_backfill.sql  0036_spec_review_frontiers.sql  0037_archived_documents.sql  0038_issue_metadata_sync.sql  0039_document_activity.sql  0040_document_version_frontiers.sql  0041_preserve_document_activity_on_compaction.sql  (+26 more)
crates/persistence/src/: auth.rs  collaborators.rs  context.rs  controls.rs  dispatch.rs  document_jobs.rs  documents.rs  error.rs  github.rs  human.rs  lib.rs  loro.rs  models.rs  notifications.rs  onboarding.rs  organization.rs  outbox.rs  project_overview.rs  reports.rs  sessions.rs  subscriptions.rs  templates.rs  triage.rs  views.rs  workflow.rs
crates/persistence/tests/: auth.rs  dispatch.rs  documents.rs  notifications.rs  organization.rs  triage.rs
crates/persistence/tests/support/: mod.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/storage/tests/: s3.rs
docker/: nginx.conf
notes/: README.md  pilot-instrumentation.md  pilot-runbook.md  project-hierarchy.md  riichi-familiarity-optimization-rfc.md  riichi-human-cli-rfc.md  riichi-pilot-architecture-rfc.md  riichi-pilot-prd.md  riichi-post-pilot-product-direction-rfc.md  riichi-write-boundary-compatibility.md  riichi-write-boundary-sync-rfc.md
scripts/: backup.sh  configure-local-postgres.sh  electric-observability.sh  generate-api-types.sh  pilot-metrics.sql  restore-verify.sh  retention.sql  seed-restore-fixture.sql  start-electric.sh  test-browser-e2e.sh  test-e2e.sh  test-electric-local.sh  test-populated-restore.sh  test-s3-storage.sh  verify-projections.sql
(+20 files in other folders)
