[package]
name = "riichi-agent-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "riichi-agent"
path = "src/main.rs"

[[bin]]
name = "riichi"
path = "src/riichi.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "io-std", "time"] }
uuid = { version = "1", features = ["serde", "v4"] }
