[package]
name = "riichi-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "riichi_api"
path = "src/lib.rs"

[[bin]]
name = "riichi-api"
path = "src/main.rs"

[[bin]]
name = "riichi-migrate"
path = "src/bin/migrate.rs"

[dependencies]
riichi-application = { path = "../../crates/application" }
riichi-domain = { path = "../../crates/domain" }
riichi-persistence = { path = "../../crates/persistence" }
axum = { version = "0.8", features = ["multipart", "ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde"] }
axum-extra = { version = "0.12.6", features = ["cookie"] }
riichi-auth = { version = "0.1.0", path = "../../crates/auth" }
async-stream = "0.3.6"
futures-core = "0.3.32"
futures-util = { version = "0.3", features = ["sink"] }
riichi-integrations-github = { version = "0.1.0", path = "../../crates/integrations-github" }
tower-http = { version = "0.7.0", features = ["trace"] }
sha2 = "0.10"
base64 = "0.22"
reqwest = { version = "0.13.4", features = ["json", "rustls", "stream"], default-features = false }
url = "2"
riichi-storage = { version = "0.1.0", path = "../../crates/storage" }

[dev-dependencies]
http-body-util = "0.1"
openidconnect = "4"
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls"] }
testcontainers = "0.27.3"
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }
tokio-tungstenite = "0.29"
tower = { version = "0.5", features = ["util"] }
url = "2"
