[package]
name = "riichi-worker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono = "0.4"
riichi-application = { path = "../../crates/application" }
riichi-persistence = { path = "../../crates/persistence" }
riichi-storage = { version = "0.1.0", path = "../../crates/storage" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.23.4", features = ["serde", "v4"] }

[dev-dependencies]
bytes = "1.12.1"
sha2 = "0.11.0"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls"] }
testcontainers = "0.27.3"
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }

