[package]
name = "riichi-application"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
riichi-domain = { path = "../domain" }
riichi-persistence = { path = "../persistence" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
uuid = { version = "1", features = ["serde", "v7"] }
serde_json = "1.0.150"
loro = "1.13.6"
sha2 = "0.10"
