[package]
name = "riichi-auth"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
openidconnect = "4"
riichi-persistence = { path = "../persistence" }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
sha2 = "0.10"
thiserror = "2"
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
axum = "0.8.9"
serde_json = "1.0.150"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls"] }
testcontainers = "0.27.3"
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread"] }
