[package]
name = "riichi-integrations-github"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hmac = "0.13.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
thiserror = "2.0.18"

[dev-dependencies]
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }

