[package]
name = "riichi-persistence"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
riichi-domain = { path = "../domain" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["chrono", "migrate", "postgres", "runtime-tokio-rustls", "uuid"] }
thiserror = "2"
uuid = { version = "1", features = ["serde", "v7"] }
sha2 = "0.10"
tokio = { version = "1", features = ["macros"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "time", "rt-multi-thread"] }
testcontainers = "0.27.3"
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }
