[package]
name = "riichi-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.89"
bytes = "1.12.1"
object_store = { version = "0.14.1", features = ["aws", "fs"] }
thiserror = "2.0.18"

[dev-dependencies]
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.24.0", features = ["v7"] }
